# CADA-Cpp-Implementations

./: .gitignore  CMakeLists.txt  LICENSE  README.txt
Chapter 2/2-3 Binary Search/: BinarySearch.hpp  CMakeLists.txt  Test.cpp
Chapter 2/2-6 Chessboard/: CMakeLists.txt  Chessboard.hpp  Test.cpp
Misc/: CommonInclude.hpp
